[package]
name = "egui-fbink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "x11"] }
fbink-sys = { path = "fbink-sys/" }
log = "0.4.21"
raw-window-handle = "0.6.1"
nohash-hasher = "0.2.0"
raqote = { version = "0.8.4", default-features = false} # Remove text because something something text
euclid = "0.22.9"