[package]
name = "egui_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4.20"
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "x11"] }
serde = { version = "1", features = ["derive"], optional = true }
log-panics = "*"
backtrace = "*"
egui-fbink = { path = "../" }

[profile.release]
panic = 'abort'


[features]
default = []
#http = ["eframe/http"] # Enable if you want to do http requests
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

#[profile.release]
#opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
